Added uwsgi setup for running on the instance.

--- a/webapp/development.ini
+++ b/webapp/development.ini
@@ -34,6 +34,15 @@ use = egg:waitress#main
 host = 0.0.0.0
 port = 6543
 
+[uwsgi]
+socket = 127.0.0.1:3032
+master = true
+processes = 2
+daemonize = ./uwsgi-development.log
+pidfile = ./pid_5000.pid
+log-slow = true
+virtualenv = ../../../
+
 ###
 # logging configuration
 # http://docs.pylonsproject.org/projects/pyramid/en/latest/narr/logging.html
