--- a/webapp/production.ini
+++ b/webapp/production.ini
@@ -22,6 +22,15 @@ use = egg:waitress#main
 host = 0.0.0.0
 port = 6543
 
+[uwsgi]
+socket = 127.0.0.1:3032
+master = true
+processes = 4
+daemonize = ./uwsgi-production.log
+pidfile = ./pid_5000.pid
+log-slow = true
+virtualenv = ../../../
+
 ###
 # logging configuration
 # http://docs.pylonsproject.org/projects/pyramid/en/latest/narr/logging.html
