--- a/front/package.json
+++ b/front/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "homepage": "https://github.com/brisbert/brisbert",
   "author": {
-    "name": "Luke Brooker",
+    "name": "Old Folks United",
     "email": "askbrisbert@gmail.com",
     "url": "http://brisbert.com"
   },
