Modified uwsgi setup.

--- a/webapp/development.ini
+++ b/webapp/development.ini
@@ -41,7 +41,7 @@ processes = 2
 daemonize = ./uwsgi-development.log
 pidfile = ./pid_5000.pid
 log-slow = true
-virtualenv = ../../../
+virtualenv = ../../env/
 
 ###
 # logging configuration
