--- a/webapp/production.ini
+++ b/webapp/production.ini
@@ -29,7 +29,7 @@ processes = 4
 daemonize = ./uwsgi-production.log
 pidfile = ./pid_5000.pid
 log-slow = true
-virtualenv = ../../../
+virtualenv = ../../env/
 
 ###
 # logging configuration
